--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,20 @@
 body{
     font-family: 'Montserrat', sans-serif;
 }
+
+.body_container{
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+}
+
+.myName{
+    grid-row: 1/2;
+}
+
+.content_index{
+    grid-row: 2/3;
+}
+
+footer{
+    grid-row: 3/4;
+}
