--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,34 @@
 body{
+    background-color: #E6FAFC;
     font-family: 'Montserrat', sans-serif;
+    margin: auto;
+    width: 50%;
 }
 
 .body_container{
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: auto auto auto;
+    grid-template-columns: auto auto auto;
 }
 
 .myName{
+    background-color: #6BA368;
     grid-row: 1/2;
+    grid-column: 1/4;
 }
 
 .content_index{
     grid-row: 2/3;
+    grid-column: 1/3;
+}
+
+.displayPicture{
+    grid-row: 2/3;
+    grid-column: 3/4;
 }
 
 footer{
+    background-color: #6BA368;
     grid-row: 3/4;
+    grid-column: 1/4;
 }
