--- a/css/style.css
+++ b/css/style.css
@@ -2,33 +2,46 @@ body{
     background-color: #E6FAFC;
     font-family: 'Montserrat', sans-serif;
     margin: auto;
-    width: 50%;
+    width: 80%;
 }
 
 .body_container{
     display: grid;
     grid-template-rows: auto auto auto;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto auto 20px;
 }
 
 .myName{
     background-color: #6BA368;
     grid-row: 1/2;
     grid-column: 1/4;
+    margin-top: 10px;
+    text-align: center;
+    border-radius: 10px;
 }
 
 .content_index{
     grid-row: 2/3;
     grid-column: 1/3;
+    margin-left: 20px;
 }
 
 .displayPicture{
-    grid-row: 2/3;
-    grid-column: 3/4;
+    grid-row: 1/4;
+    grid-column: 2/3;
+    z-index: 1;
+    justify-self: end;
+    align-self: center;
+    border-style: none;
+    max-width: 100%;
+    height: auto;
+    filter: drop-shadow(4px 4px 5px rgb(27, 26, 26))
 }
 
 footer{
     background-color: #6BA368;
     grid-row: 3/4;
     grid-column: 1/4;
+    text-align: center;
+    border-radius: 10px;
 }
