--- a/css/lesson2/medium.css
+++ b/css/lesson2/medium.css
@@ -66,7 +66,7 @@ nav ul li a {
     background-color: var(--accent-2);
 }
 
-main {
+.site-purpose, .site-audience {
     max-width: 600px;
     margin: 20px auto;
     text-align: center;
@@ -75,6 +75,23 @@ main {
     padding: 20px;
     background-color: #B4CDED;
     color: black;
+}
+
+.site-audience {
+    max-width: 800px;
+    display: grid;
+    grid-template-rows: 50px 1fr 1fr;
+    justify-content: left;
+}
+
+.persona-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-row: 1fr 1fr 1fr 1fr 1fr;
+}
+
+.persona-header {
+    grid-column: 1/3;
 }
 
 footer {
