--- a/css/lesson2/medium.css
+++ b/css/lesson2/medium.css
@@ -66,7 +66,7 @@ nav ul li a {
     background-color: var(--accent-2);
 }
 
-.site-purpose, .site-audience {
+.site-purpose, .site-audience, .site-color {
     max-width: 600px;
     margin: 20px auto;
     text-align: center;
@@ -84,6 +84,10 @@ nav ul li a {
     justify-content: left;
 }
 
+.site-color {
+    background-color: var(--accent-1);
+}
+
 .persona-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -92,6 +96,30 @@ nav ul li a {
 
 .persona-header {
     grid-column: 1/3;
+}
+
+.primary{
+    color: var(--background-color);
+}
+
+.secondary {
+    color: var(--body-color);
+}
+
+.accent-1 {
+    color: var(--nav-color);
+}
+
+.accent-2 {
+    color: var(--accent-2);
+}
+
+.dark {
+    color: var(--primary-color)
+}
+
+.white {
+    color: black
 }
 
 footer {
