--- a/weather/css/medium.css
+++ b/weather/css/medium.css
@@ -49,7 +49,8 @@
 
     .contacts-box {
         display: flex;
-        justify-content: space-evenly;
+        justify-content: center;
+        gap: 10%;
     }
 
     .map {
@@ -59,7 +60,6 @@
 
     .contacts {
         order: 2;
-        margin: auto;
     }
 
     .socials {
