Did some minor fixes with alt and small and medium views

--- a/weather/css/small.css
+++ b/weather/css/small.css
@@ -20,7 +20,7 @@ html {
 header {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
 
     background-color: var(--body-color);
