--- a/weather/css/medium.css
+++ b/weather/css/medium.css
@@ -1,6 +1,6 @@
 @media only screen and (min-width: 35rem) {
     header {
-        justify-content: flex-start;
+        justify-content: center;
         font-size: 1.1rem;
     }
 
