--- a/weather/css/small.css
+++ b/weather/css/small.css
@@ -166,9 +166,16 @@ footer ul {
     margin-bottom: 10px;
 }
 
-.date-container {
+footer p {
     text-align: center;
-    padding-top: 5px;
+    padding-top: 10px;
+    padding-bottom: 1px;
+}
+
+.date-container {
+    font-family: var(--body-font);
+    text-align: center;
+    padding-top: 1px;
 }
 
 .socials {
