--- a/weather/css/small.css
+++ b/weather/css/small.css
@@ -195,6 +195,16 @@ footer p {
     max-width: 100%;
 }
 
+#banner {
+    display: none;
+    background-color: var(--accent-2);
+    font-family: var(--header-font);
+    color: var(--body-color);
+    font-size: .75rem;
+    text-align: center;
+    padding: 5px;
+}
+
 /*----- Clearfix: Force an Element not to collapse -----*/
 .clearfix:after {
   content: "";
