--- a/weather/css/large.css
+++ b/weather/css/large.css
@@ -29,4 +29,20 @@
         font-size: 1.1rem;
     }
 
+    .small{
+        display: none;
+    }
+
+    .medium{
+        display: none;
+    }
+
+    .large{
+        display: block;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        color: yellow;
+    }
+
 } /*end large */
