--- a/weather/css/medium.css
+++ b/weather/css/medium.css
@@ -38,6 +38,22 @@
         left: 10px;
     }
 
+    .small{
+        display: none;
+    }
+
+    .medium{
+        display: block;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        color: yellow;
+    }
+
+    .large{
+        display: none;
+    }
+
     .forecast-box {
         width: 100px;
     }
