Added lazy loading of images.

--- a/lesson-4/css/style.css
+++ b/lesson-4/css/style.css
@@ -9,3 +9,12 @@ article {
     display: flex;
     flex-direction: column;
 }
+
+article img[data-src] {
+  filter: blur(0.2em);
+}
+
+article img {
+  filter: blur(0em);
+  transition: filter 0.5s;
+}
