--- a/lesson-4/css/style.css
+++ b/lesson-4/css/style.css
@@ -10,11 +10,11 @@ article {
     flex-direction: column;
 }
 
-article img[data-src] {
+article picture img[data-src] {
   filter: blur(0.2em);
 }
 
-article img {
+article picture img {
   filter: blur(0em);
   transition: filter 0.5s;
 }
