--- a/storm/css/small.css
+++ b/storm/css/small.css
@@ -105,6 +105,65 @@ p {
 
 /* */
 
+fieldset {
+    border: 1px solid var(--accent-1);
+    padding: 1rem;
+    margin-bottom: 1rem;
+}
+
+legend {
+    font-family: var(--header-font);
+    padding: .5rem;
+    font-size: 1.1rem;
+
+}
+
+.top {
+    display: block;
+    font-family: var(--body-font);
+    margin-top: 1rem;
+}
+
+.top input, .top select {
+    display: block;
+    padding: .75rem;
+    width: 90%;
+    max-width: 20rem;
+}
+
+.top input:required {
+    border-left: red solid 6px;
+}
+
+.top input:required:valid {
+    border-left: green solid 6px;
+}
+
+.sbs {
+    display: block;
+    font-family: var(--body-font);
+    padding: .75rem 0;
+}
+
+textarea {
+    display: block;
+    width: 100%;
+    height: 20rem;
+    max-width: 20rem;
+}
+
+.submitBtn {
+    border: none;
+    background-color: var(--accent-2);
+    border-radius: 10px;
+    font-family: var(--header-font);
+    font-size: 1.2rem;
+    padding: 1.6rem;
+    margin: 0 0 1rem 5%;
+}
+
+/* */
+
 footer {
     background-color: var(--body-color);
     color: var(--primary-color);
