Added responsive views

--- a/lesson-5/css/home/large.css
+++ b/lesson-5/css/home/large.css
@@ -21,6 +21,50 @@
         font-size: 1.4rem;
     }
 
+    .cards {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around
+    }
+
+    article {
+        background-color: var(--accent-2);
+        border: 1px solid rgba(0,0,0,0.5);
+        padding: 1.5rem;
+        display: flex;
+        flex-direction: column;
+        width: 250px;
+    }
+
+    article:nth-child(odd) {
+        flex-direction: column;
+    }
+
+    article img {
+        border:1px solid #000080; width: 100%; height: auto;
+        max-width: 100%;
+        order: 2;
+    }
+    article div {
+        text-align: center;
+        margin: 0 auto;
+        margin-bottom: 10px;
+        order: 1;
+    }
+
+    article h2 {
+        font-family: var(--header-font);
+        font-size: 2rem;
+        margin-bottom: 1px;
+    }
+
+    .motto {
+        margin-top: 1px;
+        font-family: var(--title-font);
+        margin-bottom: 30px;
+    }
+
     p, .date-container {
         font-size: 1rem;
     }
