--- a/lesson-10/preston-10/css/preston/large.css
+++ b/lesson-10/preston-10/css/preston/large.css
@@ -13,6 +13,10 @@
         font-size: 2.2rem;
     }
 
+    .forecasts article h3{
+        font-size: 1.4rem;
+    }
+
     .article img {
         width: 350px;
     }
