--- a/lesson-10/preston-10/css/preston/small.css
+++ b/lesson-10/preston-10/css/preston/small.css
@@ -144,25 +144,21 @@ p {
     text-align: center;
 }
 
-.forecast ul {
-    list-style: none;
-    padding: 5px;
-
+.forecasts {
     display: flex;
-    flex-flow: row wrap;
-    flex: 1 1 auto;
-    
-    margin: 10px;
+    flex-direction: column;
     justify-content: space-evenly;
 }
 
-.forecast-box {
-    background-color: var(--accent-1);
-    border-style: solid;
-    border-width: 1px;
-    border-color: rgba(0,0,0,0.3);
-    padding: .2rem;
-    margin-top: 5px;
+.forecasts article {
+    border: 1px solid rgba(0,0,0,0.5);
+    width: 300px;
+    text-align: center;
+}
+
+.forecasts article h3{
+    font-size: .9rem;
+    padding: 0px;
 }
 
 .article {
