--- a/scoots/scoots/css/home/large.css
+++ b/scoots/scoots/css/home/large.css
@@ -20,7 +20,6 @@
     }
 
     main div.banner div.link button {
-        bottom: 490px;
         right: 100px;
         width: 25rem;
     }
@@ -53,6 +52,7 @@
 
     main div.weather {
         margin-bottom: 3rem;
+        position: relative;
     }
 
     main div.weather div.status p {
@@ -60,8 +60,8 @@
     }
 
     main div.weather div.forecast {
-        bottom: -1250px;
-        left: 475px;
+        bottom: 2rem;
+        left: 1rem;
     }
 
     main div.weather div.forecast article {
