--- a/scoots/scoots/css/home/medium.css
+++ b/scoots/scoots/css/home/medium.css
@@ -17,7 +17,7 @@
 
     main div.banner div.link button {
         position: absolute;
-        bottom: 70px;
+        top: 200px;
         right: 60px;
         width: 16rem;
     }
