--- a/scoots/scoots/css/rentals/small.css
+++ b/scoots/scoots/css/rentals/small.css
@@ -14,6 +14,10 @@ main {
     text-align: center;
 }
 
+main div.gallery {
+    margin-top: 2rem;
+}
+
 main div.gallery img {
     width: 100%;
     border: 1px solid hsla(0, 0%, 0%, 0.3);
